src/tests/fixtures/generics/passOuptutTypeToInputType.input.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
export type SomeInput<T> = {
  someField: T;
};

/** @gqlInput */
type AnotherInput = {
  anotherField: string;
};

/** @gqlType */
class SomeClass {
  /** @gqlField */
  someField(args: { someArg: SomeInput<SomeClass> }): string {
    return args.someArg.someField.someField(args);
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/passOuptutTypeToInputType.input.ts:3:14 - error: The type of SomeClassSomeInput.someField must be Input Type but got: SomeClass!.

3   someField: T;
               ~
